--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Vue-Couner",
+  "name": "vue-counter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "postcss": "7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vuex": "4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
